TA-84_check-box styles on mobile devises were fixed

--- a/frontend/src/shared/FormCheckbox/FormCheckbox.module.scss
+++ b/frontend/src/shared/FormCheckbox/FormCheckbox.module.scss
@@ -40,6 +40,25 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+  @include md-device {
+    &:before {
+      position: absolute;
+      width: 24px;
+      height: 24px;
+      border-radius: 6px;
+      top: 0;
+      left: 0;
+    }
+
+    &:after {
+      width: 20px;
+      height: 20px;
+      top: 75%;
+      left: 75%;
+      border-radius: 4px;
+    }
+  }
 }
 
 .inputWrapperLg {
@@ -59,6 +78,25 @@
     height: 35px;
     border-radius: 10px;
   }
+
+  @include md-device {
+    &:before {
+      position: absolute;
+      width: 39px;
+      height: 39px;
+      border-radius: 12px;
+      top: 0;
+      left: 0;
+    }
+
+    &:after {
+      width: 35px;
+      height: 35px;
+      top: 120%;
+      left: 120%;
+      border-radius: 10px;
+    }
+  }
 }
 
 .label {
@@ -69,9 +107,8 @@
 .checked {
   &:after {
     background: $gradient-accent-color;
-    top: 50%;
-    left: 50%;
     transform: translate(-50%, -50%);
+
   }
 }
 
@@ -81,5 +118,11 @@
   left: 50%;
   transform: translate(-40%, -50%);
   pointer-events: none;
+
+  @include md-device {
+    top: 80%;
+    left: 80%;
+    transform: translate(-100%, -100%);
+  }
 }
 
